# Autobot

./: README.md
catkin_ws/: lab.pgm  lab.yaml  notplugged  plugged  rosgraph.dot
catkin_ws/devel/: .catkin  .rosinstall  _rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/include/autoBot/: Unicycle.h
catkin_ws/devel/include/autobot/: Unicycle.h
catkin_ws/devel/include/autobotx/: Unicycle.h
catkin_ws/devel/include/beginner_tutorials/: Unicycle.h  unicycle.h
catkin_ws/devel/lib/autobot/: link  listner  talker
catkin_ws/devel/lib/autobotx/: link
catkin_ws/devel/lib/pkgconfig/: autoBot.pc  autobot.pc  autobotx.pc  beginner_tutorials.pc  kinect_slam.pc
catkin_ws/devel/share/AutoBot/cmake/: AutoBot-msg-paths.cmake
catkin_ws/devel/share/autoBot/cmake/: autoBot-msg-paths.cmake  autoBotConfig.cmake
catkin_ws/devel/share/autobot/cmake/: autobot-msg-paths.cmake  autobotConfig.cmake
catkin_ws/devel/share/autobotx/cmake/: autobotx-msg-extras.cmake  autobotx-msg-paths.cmake  autobotxConfig.cmake
catkin_ws/devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-extras.cmake  beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
catkin_ws/devel/share/kinect_slam/cmake/: kinect_slamConfig.cmake
catkin_ws/devel/share/rospy_tutorials/cmake/: rospy_tutorials-msg-paths.cmake
catkin_ws/install/: _setup_util.py
catkin_ws/install/include/autobotx/: Unicycle.h
catkin_ws/install/lib/autobotx/: teleop.py  teleop_keys.py
catkin_ws/install/lib/pkgconfig/: autobotx.pc
catkin_ws/install/share/autobotx/: package.xml  teleop_keys.py
catkin_ws/install/share/autobotx/cmake/: autobotxConfig.cmake
catkin_ws/install/share/autobotx/msg/: Unicycle.msg
catkin_ws/install/share/kinect_slam/: package.xml
catkin_ws/src/autobot/: CMakeLists.txt
catkin_ws/src/autobot/scripts/: autobot.py  reader.py  teleop.py
catkin_ws/src/autobot/src/: link.cpp  mavlink_communication.cpp  mavlink_communication.h  serial_port.cpp
catkin_ws/src/autobot/src/mavlink/autobot/: autobot.h  mavlink_msg_desire_wheel_rpm.hpp  mavlink_msg_initial_status.h  mavlink_msg_initial_status.hpp  mavlink_msg_left_wheel_pid_gains.h  mavlink_msg_left_wheel_pid_gains.hpp  mavlink_msg_right_wheel_pid_gains.h  mavlink_msg_right_wheel_pid_gains.hpp  mavlink_msg_robot_dimensions.h  mavlink_msg_robot_dimensions.hpp  mavlink_msg_robot_distance_sensor_readings.h  mavlink_msg_robot_position_change.hpp  mavlink_msg_robot_sensor_readings.h  mavlink_msg_robot_sensor_readings.hpp  version.h
catkin_ws/src/autobotx/: CMakeLists.txt  package.xml
catkin_ws/src/autobotx/launch/: amcl.launch  base_controller.launch  main.launch  nav_goal.launch
catkin_ws/src/autobotx/param/: dwa_local_planner_params.yaml
catkin_ws/src/autobotx/src/: link.cpp  mavlink_communication.cpp  mavlink_communication.h  serial_port.cpp  serial_port.h
catkin_ws/src/autobotx/src/mavlink/autobot/: autobot.hpp  gtestsuite.hpp  mavlink.h  mavlink_msg_desire_cmd_val.h  mavlink_msg_desire_cmd_val.hpp  mavlink_msg_desire_wheel_rpm.h  mavlink_msg_robot_distance_sensor_readings.hpp  mavlink_msg_robot_position_change.h  testsuite.h
catkin_ws/src/kinect_slam/: CMakeLists.txt
(+45 files in other folders)
